<resources>
    <string name="app_name">BillPleaseL3</string>
    <string name="amount">Amount</string>
    <string name="num_of_pax">Num Of Pax</string>
    <string name="no_svs">NO SVS</string>
    <string name="gst">GST</string>
    <string name="discount">Discount (%)</string>
    <string name="cash">Cash</string>
    <string name="PayNow">PayNow</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
    <string name="total_bill">Total Bill:</string>
    <string name="each_pays">Each Pays:</string>
    <string name="SPLIT">SPLIT</string>
    <string name="RESET">RESET</string>
</resources>